css/theme/pw15.css
/* ... */
.reveal pre {
  width: 100%;
  line-height: 1.3em;
}

.reveal pre code {
  font-size: 1.2em;
  max-height: none;
}

.reveal section img {
  border: none;
  box-shadow: none;
}

.reveal h3 code {
  text-transform: none;
  font-size: 130%;
}

.reveal pre > code > .implied {
  display: block; margin: 0;
  opacity: 0.8;
  background: #e9e9e9;
}
.reveal pre > code > .implied:first-child {
  border-bottom: 0.1em solid silver;
}
.reveal pre > code > .implied:last-child {
  margin-top: 1em;
  border-top: 0.1em solid silver;
}

.reveal pre > code .comment > a {
  color: #8e908c;
  text-decoration: underline;
}
.reveal pre > code .comment > a:hover,
.reveal pre > code .comment > a:focus {
  color: black;
}

.reveal sup { font-size: 60%; }

.reveal section > footer {
  margin-top: 2em;
  font-size: 60%;
  opacity: 0.8;
  line-height: 1.4em
  /*color: rgba(255, 255, 255, 0.8);*/
}

.reveal li + li { margin-top: 0.5em; }

.reveal section ul, .reveal section ol {
  margin-top: 1em;
  margin-bottom: 1em;
}
.reveal section ul.narrow, .reveal section ol.narrow {
  margin-top: 0.5em;
  margin-bottom: 0.5em;
}

.reveal ul.narrow > li + li, .reveal ol.narrow > li + li {
  margin-top: 0.3em;
}

.reveal section p + h4, .reveal section pre + h4,
.reveal section .fragment > h4:first-child { margin: 1em 0; }

.reveal section .breathing { margin: 1em 0; }

b.wrong, b.right {
  font-weight: normal;
  padding: 0.1em 0.5em 0.1em 0; border-radius: 0.5em;
}
b.wrong:empty, b.right:empty { padding-left: 0.5em; }
b.wrong { background: #fdd; }
b.wrong::after {
  content: " ✖ KO";
  font-weight: bold;
  color: #b00;
}

b.right { background: #dfd; }
b.right::after {
  content: " ✔ OK";
  font-weight: bold;
  color: #090;
}

.reveal pre > code u, b.hl {
  background: #fe9; padding: 0.1em 0.3em; border-radius: 0.5em;
  text-decoration: none;
}

.theme-color-coral-blue h3 code {
  color: yellow;
}

#qrcode {
  border: none;
  border-radius: 1em;
}

/*.reveal h3 + h1 {
  margin-top: 0.4em;
}
*/
.reveal h3 + h2 {
  margin-top: 0.8em;
}

.reveal h2 + h4 {
  margin-top: 1em;
}

/*.reveal p + p {
  margin-top: 0.8em;
}
*/
.reveal table { width: 100%; border-collapse: collapse; margin: 1em 0; font-size: 90%; }
.reveal td, .reveal th {
  padding: 0 0.2em 0.2em;
}
.reveal table > thead > tr > th {
  border: 2px solid silver;
  border-width: 2px 0;
}
.reveal table > tbody > tr:nth-child(even) {
  background: rgba(255, 255, 255, 0.9);
}

#ssrr tr > td:last-child, #ssrr tr > th:last-child {
  text-align: right;
}

.reveal section.meme.present blockquote {
  display: none;
}

.two-columns {
  display: flex;
  flex-wrap: wrap;
  align-items: stretch;
}
.two-columns > div {
  flex-grow: 1;
  flex-basis: 50%;
  text-align: center;
}

.reveal iframe[name^="tonic-embed-"] {
  max-width: none;
  max-height: none;
}

.reveal section.breathing p,
.reveal section.breathing li {
  margin-top: 1em;
}

.reveal section .translucent {
  background: rgba(255, 255, 255, 0.5);
  text-shadow: 0 0 0.2em white;
}

